[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/ui/icon-black.png" type="Texture" id=4]
[ext_resource path="res://art/ui/icon-white.png" type="Texture" id=5]
[ext_resource path="res://art/ui/icon-koi-black.png" type="Texture" id=6]
[ext_resource path="res://art/ui/icon-koi-white.png" type="Texture" id=7]
[ext_resource path="res://Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/sound/172662__trebblofang__drone0005.wav" type="AudioStream" id=10]
[ext_resource path="res://art/sound/439553__andrewkn__road-in-the-forest.wav" type="AudioStream" id=11]
[ext_resource path="res://Credits.tscn" type="PackedScene" id=12]

[node name="Main" type="Node"]
script = ExtResource( 1 )
Ball = ExtResource( 2 )
starting_score = 50

[node name="Walls" parent="." instance=ExtResource( 3 )]

[node name="Game" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Game"]
margin_right = 40.0
margin_bottom = 40.0

[node name="IconBlack" type="Sprite" parent="Game/Control"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 150, 540 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="IconWhite" type="Sprite" parent="Game/Control"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 150, 540 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="IconKoiBlack" type="Sprite" parent="Game/Control"]
position = Vector2( 150, 540 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="IconKoiWhite" type="Sprite" parent="Game/Control"]
position = Vector2( 150, 540 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Player" parent="Game/Control" instance=ExtResource( 8 )]
position = Vector2( -250, 540 )

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="SoundTween" type="Tween" parent="."]

[node name="Credits" parent="." instance=ExtResource( 12 )]

[node name="IconTween" type="Tween" parent="."]

[node name="IconColorTween" type="Tween" parent="."]
[connection signal="show_credits" from="HUD" to="." method="_on_HUD_show_credits"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="tween_completed" from="SoundTween" to="." method="_on_SoundTween_tween_completed"]
[connection signal="go_back_to_main_menu" from="Credits" to="." method="_on_Credits_go_back_to_main_menu"]
[connection signal="tween_completed" from="IconColorTween" to="." method="_on_IconColorTween_tween_completed"]
